# Yoink-Core

./: README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml  uv.lock.bak
backend/tests/: test_api_integration.py  test_jobs.py  test_rename_api.py
backend/yoink/api/: jobs.py  models.py  routes.py  storage.py  transparent_render.py  user_jobs.py  worker.py
frontend/src/app/: page.tsx
frontend/src/app/jobs/[id]/: page.tsx
frontend/src/components/: component-card.tsx  job-card.tsx  rename-upload-dialog.tsx
frontend/src/lib/: api.ts
